# HYDRAN

./: README.md  contributors.md  env_format.md  features.md  main.py  message.txt  pyproject.toml
SMS/: .gitignore  main.py  requirements.txt
core/: db.py
features/stock/: models.py  router.py  service.py
features/symptom_checker/: flutter_dependency.txt  models.py  router.py  service.py
features/symptom_checker/faiss_index/: index.pkl
rag/: conversation.py  rag.py  setup.py
references/: README.md  ascii_converter.py  chain.py  conversation.py  parallel_chain.py  prompt_template.py  supabase_connect.py
references/api/: models.py  router.py  sync.py
references/rag/: basic1.py  basic2.py  metadata1.py  metadata2.py  one_off.py
