[project]
name = "hydran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.182.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-community>=2.0.10",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "supabase>=2.18.1",
    "twilio>=9.8.1",
    "uvicorn>=0.35.0",
]
